--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,27 +2,36 @@ name: transport
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment: 
+environment:
   sdk: '>=3.0.6 <4.0.0'
 
-dependencies: 
+dependencies:
   cupertino_icons: ^1.0.2
   iconly: ^1.0.1
   lottie: ^2.6.0
+  flutter_svg: ^2.0.7
   google_fonts: ^5.1.0
+  cloud_firestore: ^4.9.1
+  mask_text_input_formatter: ^2.5.0
   animated_text_kit: ^4.2.2
+  line_icons: ^2.0.3
+  firebase_core: ^2.15.1
+  firebase_auth: 4.9.0
+  image_picker: ^1.0.4
+  firebase_storage: ^11.2.6
   get: 4.6.5
-  flutter: 
+  flutter:
     sdk: flutter
 
-dev_dependencies: 
+dev_dependencies:
   flutter_lints: ^2.0.0
-  flutter_test: 
+  flutter_test:
     sdk: flutter
 
-flutter: 
+flutter:
   uses-material-design: true
 
   assets:
     - assets/lotties/
+    - assets/svgs/
 
