--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:77642443204:ios:c1b4737ae719c77f471c91",
-  "FIREBASE_PROJECT_ID": "habibi-52021",
-  "GCM_SENDER_ID": "77642443204"
+  "GOOGLE_APP_ID": "1:226435440026:ios:61dc103ea97345d5996e23",
+  "FIREBASE_PROJECT_ID": "habibi-transport",
+  "GCM_SENDER_ID": "226435440026"
 }
